syntax = "proto3";

package discount_service;

option go_package = "pb/discount";

service DiscountService {
    rpc Request (Empty) returns (Response);
}

message Response {
    string time_taken = 1;
}

message Empty {}
